# dsc

./: Cargo.toml  LICENSE  LICENSE.txt  README.md
src/: dscrape.rs  main.rs
