[package]
name = "dscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.7"
rust_search = "2.0.0"
anyhow = "1.0"
log = "0.4.20"
simple-logging = "2.0.2"
nanoid = "0.4.0"